[package]
name = "resize-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
image = "0.24.8"
nix = { version = "0.28.0", features = ["signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "std", "env-filter" ] }
